10th commit: implementation of template home page, login page and signup page

--- a/src/main/webapp/signupStatusTest.html
+++ b/src/main/webapp/signupStatusTest.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="styles/signup_status.css">
+    <link rel="stylesheet" href="styles/status.css">
 </head>
 <body>
-    <div class="center">
-        <h1>Registration has been successful</h1>
-        <div >
-            <input class="back-to-signup-page" type="button" value="Back to signup page">
-        </div>
-    </div>
+<div class="center">
+    <h2>Registration has been successful</h2>
+    <a href="#">
+        <input class="back-to-signup-page" type="submit" value="Back to the signup page">
+    </a>
+</div>
 </body>
 </html>
