--- a/src/main/webapp/indexTest.html
+++ b/src/main/webapp/indexTest.html
@@ -3,24 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
-  <link rel="stylesheet" href="/styles/forms.css">
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
 <div class="center">
-  <h1>Login</h1>
-  <form action="j_security_check" method="post">
-    <div class="txt_field">
-      <input name="j_username" type="text" required>
+  <h1>Signup</h1>
+  <form action="${pageContext.request.contextPath}/signup" method="post">
+    <div class="txt-field">
+      <input name="username" type="text" required>
       <label>Username</label>
     </div>
-    <div class="txt_field">
-      <input name="j_password" type="password" required>
+    <div class="txt-field">
+      <input name="email" type="email" required>
+      <label>Email</label>
+    </div>
+    <div class="txt-field">
+      <input name="pass" type="password" required>
       <label>Password</label>
     </div>
-    <div class="pass">Forgot Password?</div>
-    <input type="submit" value="Login">
-    <div class="signup_link">
-      Not a member? <a href="#">Signup</a>
+    <input class="user-signup-button" type="submit" value="Signup">
+    <div class="users-list">
+      <c:forEach var="users" items="${applicationScope.users}">
+        <li><c:out value="${users.username} - ${users.email} - ${users.password}"/></li>
+      </c:forEach>
     </div>
   </form>
 </div>
